docs/version-1.29/modules/en/pages/howtos/ui-extension/03-tracing.adoc
include::partial$variables.adoc[]
= Tracing
:page-languages: [en, de, es, fr, ja, pt, zh]
:revdate: 2025-07-09
:page-revdate: {revdate}
:description: Tracing for {short-project-name}.
:doc-persona: ["kubewarden-operator", "kubewarden-integrator"]
:doc-topic: ["operator-manual", "ui-extension", "tracing"]
:doc-type: ["hosto"]
:keywords: ["kubewarden", "kubernetes", "tracing"]
:current-version: {page-origin-branch}

Tracing allows collection of fine-grained details about policy evaluations.
It's a useful tool for debugging issues in your {short-project-name} deployment
and policies.

{short-project-name} uses https://www.jaegertracing.io/[Jaeger] to receive,
store, and visualize trace events.

*_Policy tracing logs_*
image:ui_policy_tracing.png[UI Policy Tracing Logs]

== Prerequisites

You need Cert-Manager and OpenTelemetry. Follow
xref:howtos/telemetry/10-opentelemetry-qs.adoc#_install_opentelemetry[these
instructions] to install Cert Manager and the OpenTelemetry Operator.

== Install Jaeger

Apply the installation steps from the
xref:howtos/telemetry/20-tracing-qs.adoc#_install_jaeger[tracing quickstart].

Once the Jaeger operator creates all the resources, there is a Service under
`my-open-telemetry-collector.jaeger.svc.cluster.local`.

The Jaeger Query UI is reachable at the following address:

[subs="+attributes",console]
----
https://<CLUSTER_IP>/api/v1/namespaces/jaeger/services/http:my-open-telemetry-query:16686/proxy/search
----

This endpoint may be unique depending on your configuration. You can find the
endpoint listed for your Jaeger resource under the Services page.

=== Update `rancher-kubewarden-controller` with Jaeger endpoint

You'll need to edit the `rancher-kubewarden-controller` resource to add the Jaeger endpoint "my-open-telemetry-collector.jaeger.svc.cluster.local:4317".

For instance:

[subs="+attributes",yaml]
----
telemetry:
  tracing: true
  mode: sidecar
  sidecar:
    tracing:
      jaeger:
        endpoint: my-open-telemetry-collector.jaeger.svc.cluster.local:4317
        tls:
          insecure: true
----

The installation of the service, `my-open-telemetry-collector`, is under the
`jaeger` namespace.

[CAUTION]
====

For simplicity, we're not encrypting the communication between the
OpenTelemetry collector and the Jaeger endpoint.

This is *unsuitable for production deployment*. You should you read Jaeger's
https://www.jaegertracing.io/docs/latest/kubernetes/[documentation].

====


You should now be able to view any failed requests for policies tied to a
specific Policy Server. You can also see the detail view for any given policy.
You can get a more in-depth view of the traces by using the Jaeger UI.
